@@ -10,3 +10,4 @@ xml:
     tag.xml
     test_case_framework.xml
     event.xml
+    translation.xml
