@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<form string="Export Translation">
+    <label name="file"/>
+    <field name="file"/>
+</form>
